--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 </div>
 </div>
 
-<script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
-<script src="basic.js"></script>
+<script src="jquery-3.2.0.min.js"></script>
+<script src="javascript.js"></script>
 
 </body>
 
