--- a/index.html
+++ b/index.html
@@ -100,12 +100,13 @@
 
 <div class='container'>
   <div id="mission">
-    <h2><small>Eat Healthy, Live Smart</small><br/>From just £100 a month!</h2>
+    <h2><small>Eat Healthy, Live Smart</small><br/>Meals On Wheels Is A Bespoke Meal Delivery Service</h2>
 
 <div class='lead'>
     <p>We provide all the ingredients that you will need</p>
     <p>Everything is fresh and healthy</p>
     <p>We cater for every food need</p>
+    <p>Prices start at just £100 a month</p>
 </div>
 
     <div id='social-buttons'>
