--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 <div class='container'>
   <div id="mission">
-    <h2><small>Eat Healthy, Live Smart</small><br/>Meals On Wheels Is A Bespoke Meal Delivery Service</h2>
+    <h2><small>Eat Healthy, Live Smart</small><br/>We Are A Bespoke Meal Delivery Service</h2>
 
 <div class='lead'>
     <p>We provide all the ingredients that you will need</p>
