--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h1>Meals On Wheels</h1>
 </div>
 <div class='col-sm-8'>
-    <img src='images/happy_tomato2.png' class='img-responsive'>
+    <img src='images/tomato_edit.png' class='img-responsive'>
   </div>
   </div>
 
