height of people

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <h2><small>What do meals on wheels customers think of us?</small><br /> Testimonials</h2>
 
 
-<div class='col-sm-4'>
+<div class='class1 col-sm-4'>
     <div>
       <img src='images/business_lady1.jpeg'>
       <p>As a young professional I barely have time to sleep let alone make my own meals! This is the perfect solution.</p>
@@ -77,7 +77,8 @@
     </div>
 
 
-<div class='col-sm-4'>
+<div class='class1 col-sm-4'>
+
     <div>
       <img src='images/business_man.jpeg'>
       <p>I used to only think it was pensioners who had their meals delivered! Now, I'd never go back to cooking my own meals.</p>
@@ -86,7 +87,7 @@
     </div>
 
 
-<div class='col-sm-4'>
+<div class='class1 col-sm-4'>
     <div>
       <img src='images/business_lady2.png'>
       <p>I used to live off beans on toast! Now I eat fresh and tasty food for every meal!</p>
