--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
  
 
 
-<div class='container'>
+<div class='end'>
   <div id="mission">
     <h2><small>Eat Healthy, Live Smart</small><br/>We Are A Bespoke Meal Delivery Service</h2>
 
