--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h1>Meals On Wheels</h1>
 </div>
 <div class='col-sm-8'>
-    <img src='images/tomato_edit.png' class='tomato img-responsive'>
+    <img src='images/tomato_edit.png' class='tomato img-responsive' height= 50px>
   </div>
   </div>
 
@@ -76,11 +76,9 @@
 
 
 <div class='class1 col-sm-4'>
-
       <img src='images/business_man.jpeg'>
       <p>I used to only think it was pensioners who had their meals delivered! Now, I'd never go back to cooking my own meals.</p>
       <small>Scott Healey, Graduate Analyst at RBS</small>
- 
     </div>
 
 
