--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 <br>
 
     <div id='social-buttons'>
-      <button class='btn-twitter'>Twitter</button>
-      <button class='btn-facebook'>Facebook</button>
-      <button class='btn-pinterest'>Pinterest</button>
+      <a href="https://www.twitter.com">  <button class='btn-twitter'>Twitter</button></a>
+     <a href="https://www.Facebook.com"> <button class='btn-facebook'>Facebook</button></a>
+    <a href="http://www.pinterest.com"><button class='btn-pinterest'>Pinterest</button></a>
     </div>
  </div>
 </div>
