--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </div>
 
     <form role='form'>
-      <label for="email">Find out more</label>
+      <label for="email">Sign up to our mailing list</label>
       <input type="text" name="email" >
       <button type="submit">Send</button>
     </form>
