--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
 
 <div class='container'>
- <div class='jumbotron'>
+ <div class='background'>
 
  <div class='row'>
 <div class='col-sm-4'>
