--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <blockquote>
 <div class='container'>
   <div id="buzz">
-    <h2><small>What do meals on wheels customers think of us?</small> <br /> Testimonials</h2>
+    <h2><small>What do our customers think of us?</small> <br /> Testimonials</h2>
 
 
 <div class='class1 col-sm-4'>
