--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
  <div class='background'>
 
  <div class='row'>
-<div class='col-sm-4 heading'>
+<div class='col-sm-4'>
     <h1>Meals On Wheels</h1>
 </div>
 <div class='col-sm-8'>
