--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <div id='social-buttons'>
       <a href="https://www.twitter.com">  <button class='btn-twitter'>Twitter</button></a>
      <a href="https://www.Facebook.com"> <button class='btn-facebook'>Facebook</button></a>
-    <a href="http://www.pinterest.com"><button class='btn-pinterest'>Pinterest</button></a>
+    <a href="http://www.just-eat.co.uk"><button class='btn-JustEat'>JustEat</button></a>
     </div>
  </div>
 </div>
