--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <div class='class1 col-sm-4'>
       <img src='images/business_lady1.jpeg'>
       <p>As a young professional I barely have time to sleep let alone make my own meals! This is the perfect solution.</p>
-      <small>Ava Lynch, Fund Administrator</small>
+      <small>Ava Lynch, Fund Administrator at HSBC</small>
     </div>
 
 
